<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".PagoActivity">

    <!-- Botón para retroceder -->
    <!-- Título centralizado -->

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:contentDescription="Volver"
        android:src="@drawable/retroceso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Método de Pago"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <!-- Contenedor de opciones de pago -->
    <LinearLayout
        android:id="@+id/layoutOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle">

        <!-- Opción Galicia -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/optionGalicia"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/galicia"
                android:src="@drawable/selector_galicia" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Galicia"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Opción Rapipago -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/optionRapiPago"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/rapipago"
                android:src="@drawable/selector_rapipago" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="RapiPago"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Opción PagoFácil -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/optionPagoFacil"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/pagofacil"
                android:src="@drawable/selector_pagofacil" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Pago Fácil"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Botón para Efectivo -->
    <Button
        android:id="@+id/btnEfectivo"
        android:layout_width="370dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#1E88E5"
        android:text="Efectivo"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutOptions" />


    <!-- Botón para Tarjeta -->
    <Button
        android:id="@+id/btnOnlineTarjeta"
        android:layout_width="369dp"
        android:layout_height="40dp"
        android:backgroundTint="#1E88E5"
        android:text="Tarjeta"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEfectivo"
        app:layout_constraintVertical_bias="0.07" />




</androidx.constraintlayout.widget.ConstraintLayout>